k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-app
  namespace: python-app
  labels:
    app.kubernetes.io/instance: python-app
    app.kubernetes.io/name: python-app
spec:
  type: NodePort
  selector:
    app: python-app
  ports:
  - port: 8080
    targetPort: 8080
